src/snapshots/interpreter__parser__tests__nested_blocks@mixed.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `{[{()}]}`"
---
stmts:
  - Block:
      - SquareBlock:
          - Block:
              - ParenBlock: []
errors: []

