src/snapshots/interpreter__parser__tests__nested_blocks@{}.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `{{{}}}`"
---
stmts:
  - Block:
      - Block:
          - Block: []
errors: []

