src/snapshots/interpreter__parser__tests__not_working@unbalanced_begin.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\newenvironment{c}{\\begin{b}}{\\end{b}}`"
---
stmts: []
errors:
  - Expected block or cmd. Found Eof

