src/snapshots/interpreter__parser__tests__simple_test@simple_empty.snap
---
source: src/parser.rs
expression: ast
info: "input = `\\begin{equation} \\end{equation}`"
---
stmts:
  - KnownEnv:
      name: equation
      args: []
      children:
        - Token: Space
      is_alt: false
      kind: BlockMath
      start_end: ~

