src/snapshots/interpreter__parser__tests__simple_test@simple_txt_alt.snap
---
source: src/parser.rs
expression: ast
info: "input = `\\begin{equation*} as \\end{equation*}`"
---
stmts:
  - KnownEnv:
      name: equation
      args: []
      children:
        - Token: Space
        - Text: as
        - Token: Space
      is_alt: true
      kind: BlockMath
      start_end: ~

